hypermedia _embedded resources - WIP
