# internal/http/rest/presenters/incident_presenter.go
@@ -3,6 +3,7 @@ package presenters
 import (
 	"net/http"
 
+	"github.com/KompiTech/itsm-ticket-management-service/internal/domain/embedded"
 	"github.com/KompiTech/itsm-ticket-management-service/internal/domain/incident"
 	"github.com/KompiTech/itsm-ticket-management-service/internal/http/rest/api"
 	"github.com/KompiTech/itsm-ticket-management-service/internal/http/rest/presenters/hypermedia"
@@ -22,9 +23,17 @@ type incidentPresenter struct {
 }
 
 func (p incidentPresenter) RenderIncident(w http.ResponseWriter, inc incident.Incident, hypermediaMapper hypermedia.Mapper) {
+	embeddedCreatedBy := api.NewEmbeddedBasicUser(*inc.CreatedUpdated.CreatedBy())
+	mapping := *hypermedia.EmbeddedResourcesMappingDefinition[embedded.CreatedBy].AddResource(embeddedCreatedBy)
+	//umapping := *hypermedia.EmbeddedResourcesMappingDefinition[embedded.UpdatedBy].AddResource(embeddedCreatedBy)
+
+	var embeddedMappings []hypermedia.EmbeddedResourceMapping
+	embeddedMappings = append(embeddedMappings, mapping)
+
 	incResp := api.IncidentResponse{
 		Incident: p.convertIncidentToAPI(inc),
 		Links:    p.resourceToHypermediaLinks(inc, hypermediaMapper, false),
+		Embedded: p.resourceToEmbeddedField(inc, embeddedMappings, hypermediaMapper),
 	}
 
 	p.renderJSON(w, incResp)
@@ -34,9 +43,15 @@ func (p incidentPresenter) RenderIncidentList(w http.ResponseWriter, incidentLis
 	var apiList []api.IncidentResponse
 
 	for _, inc := range incidentList.Result {
+		//embeddedCreatedBy := api.NewEmbeddedBasicUser(*inc.CreatedUpdated.CreatedBy())
+		//mapping := *hypermedia.EmbeddedResourcesMappingDefinition[embedded.CreatedBy].AddResource(embeddedCreatedBy)
+		var embeddedMappings []hypermedia.EmbeddedResourceMapping
+		//embeddedMappings = append(embeddedMappings, mapping)
+
 		incResp := api.IncidentResponse{
 			Incident: p.convertIncidentToAPI(inc),
 			Links:    p.resourceToHypermediaLinks(inc, hypermediaMapper, true),
+			Embedded: p.resourceToEmbeddedField(inc, embeddedMappings, hypermediaMapper),
 		}
 		apiList = append(apiList, incResp)
 	}
@@ -59,7 +74,7 @@ func (p incidentPresenter) RenderIncidentList(w http.ResponseWriter, incidentLis
 func (p incidentPresenter) convertIncidentToAPI(inc incident.Incident) api.Incident {
 	createdInfo := api.CreatedInfo{
 		CreatedAt: inc.CreatedUpdated.CreatedAt().String(),
-		CreatedBy: inc.CreatedUpdated.CreatedBy().String(),
+		CreatedBy: inc.CreatedUpdated.CreatedByID().String(),
 	}
 
 	updatedInfo := api.UpdatedInfo{
